# ExperimentScheduler

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
calibrations/: Test.json
schedules/: Test.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-shell.tsx  block-context-menu.tsx  device-overview-panel.tsx  device-row-header.tsx  hardware-assignment-select.tsx  inspector-panel.tsx  overview-minimap.tsx  pump-calibration-panel.tsx  row-sidebar.tsx  schedule-block.tsx  scheduler-layout.tsx  scheduler-sidebar.tsx  timeline-grid.tsx  timeline-row.tsx  top-toolbar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  draft-number-input.tsx  input.tsx  label.tsx  select.tsx  separator.tsx
src/lib/: board-api.ts  firmware-constraints.ts  hardware-bindings.ts  layout.ts  project-files.ts  pump-calibration.ts  schedule.ts  time.ts  trigger-output.ts  utils.ts
src/store/: board-store.ts  pump-calibration-store.ts  scheduler-store.ts
src/types/: scheduler.ts
