[package]
name = "experiment_scheduler"
version = "0.1.0"
description = "Polished desktop pump experiment scheduler"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "experiment_scheduler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Devices_Communication",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }
